<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="427dp"
    android:layout_marginStart="3dp"
    android:layout_marginLeft="3dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/map_memo_popup"
        android:contentDescription="@string/description_title_image" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/memo_color_bar"
            android:fontFamily="monospace"
            android:forceDarkAllowed="false"
            android:gravity="center"
            android:text="@string/description_title_input"
            android:textColor="#00BCD4"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout_Background"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="#F3EFEF">

        <TextView
            android:id="@+id/textMemo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="serif"
            android:gravity="start"
            android:textColor="#3E3E3E"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#818181"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_memo_popup_ok"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="#424242"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/description_ok_button"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>